@@ -1,5 +1,7 @@
 2007-02-19  Mickael Remond  <mickael.remond@process-one.net>
 
+	* src/mod_muc/mod_muc_room.erl: Added an option set affiliations.
+
 	* doc/api/*: Added Erlang documentation generation script (EJAB-188).
 	* doc/version.tex: Updated.
 	* src/ejabberd.app: Updated.
